[gd_scene load_steps=5 format=3 uid="uid://cg53pe2dayhhf"]

[ext_resource type="Script" path="res://Scenes/Levels/game_play_ui.gd" id="1_swymf"]
[ext_resource type="Texture2D" uid="uid://cxcbm48rgbgow" path="res://Graphics/Misc/redHB.png" id="2_txahm"]
[ext_resource type="Texture2D" uid="uid://2akwscu305wk" path="res://Graphics/Misc/greenHB.png" id="3_15n8l"]

[sub_resource type="Theme" id="Theme_nglb5"]

[node name="GamePlayUI" type="CanvasLayer"]
script = ExtResource("1_swymf")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 0.1
offset_right = 40.0
offset_bottom = 40.0

[node name="Inventory" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_right = 0.02
offset_right = 110.0
offset_bottom = 116.0

[node name="Arrows" type="Label" parent="Panel/Inventory"]
layout_mode = 2
theme = SubResource("Theme_nglb5")
text = "Arrows: "

[node name="Bombs" type="Label" parent="Panel/Inventory"]
layout_mode = 2
text = "Bombs: "

[node name="ShortShields" type="Label" parent="Panel/Inventory"]
layout_mode = 2
text = "Short Shields: "

[node name="LongShields" type="Label" parent="Panel/Inventory"]
layout_mode = 2
text = "Long Shields: "

[node name="ItemCounts" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.94
anchor_right = 0.96
offset_left = -101.5
offset_right = 32.5
offset_bottom = 86.0
grow_horizontal = 0

[node name="Coins" type="Label" parent="Panel/ItemCounts"]
layout_mode = 2
text = "Coins: "

[node name="Gems" type="Label" parent="Panel/ItemCounts"]
layout_mode = 2
text = "Gems: "

[node name="ChallengersLeft" type="Label" parent="Panel/ItemCounts"]
layout_mode = 2
text = "Challengers Left: "

[node name="HealthGroup" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 57.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HBLabels" type="HBoxContainer" parent="Panel/HealthGroup"]
layout_mode = 2
size_flags_horizontal = 0

[node name="minHealth" type="Label" parent="Panel/HealthGroup/HBLabels"]
custom_minimum_size = Vector2(134, 0)
layout_mode = 2
text = "0"

[node name="Label" type="Label" parent="Panel/HealthGroup/HBLabels"]
custom_minimum_size = Vector2(134, 0)
layout_mode = 2
text = "Health"
horizontal_alignment = 1

[node name="maxHealth" type="Label" parent="Panel/HealthGroup/HBLabels"]
custom_minimum_size = Vector2(134, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "999"
horizontal_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="Panel/HealthGroup"]
layout_mode = 2
value = 100.0
rounded = true
stretch_margin_left = 40
stretch_margin_right = 40
texture_under = ExtResource("2_txahm")
texture_progress = ExtResource("3_15n8l")

[node name="LevelNumber" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -23.0
offset_right = 24.5
grow_horizontal = 2
grow_vertical = 0
text = "Level: "
